--- a/views/books/reading-history.mustache
+++ b/views/books/reading-history.mustache
@@ -16,7 +16,7 @@
                     <div class="card mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Finished Books</h5>
+                                <h5 class="card-title">Reading History</h5>
                                 <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
                                     <thead>
                                     <tr>
