Add multiple user support for bookmarks

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -31,7 +31,7 @@
 
                     <ul>
                         {{#highlights}}
-                            <li>{{{highlight}}}</li>
+                            <li>{{{highlight}}} <a href="/highlights/{{id}}">Go to highlight</a></li>
                         {{/highlights}}
                     </ul>
 
