--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -86,6 +86,11 @@
                         <label for="tags">Tags:</label>
                         <input id="tags" placeholder="Tags" type="text" class="form-control">
                     </div>
+
+                    <div class="form-group">
+                        <label for="tags">Info Link:</label>
+                        <input id="info_link" placeholder="Info Link" type="text" class="form-control">
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
