Fix info_link saving problem

--- a/views/modal/add-book.mustache
+++ b/views/modal/add-book.mustache
@@ -84,12 +84,12 @@
 
                     <div class="form-group">
                         <label for="tags">Tags:</label>
-                        <input id="tags" placeholder="Tags" type="text" class="form-control">
+                        <input id="tags" name="tags" placeholder="Tags" type="text" class="form-control">
                     </div>
 
                     <div class="form-group">
-                        <label for="tags">Info Link:</label>
-                        <input id="info_link" placeholder="Info Link" type="text" class="form-control">
+                        <label for="info_link">Info Link:</label>
+                        <input id="info_link" name="info_link" placeholder="Info Link" type="text" class="form-control">
                     </div>
                 </form>
             </div>
