Edit link elements by css change

--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -3,8 +3,7 @@
 
 <head>
     {{> head }}
-    <link rel="stylesheet"
-          href="https://cdn.rawgit.com/xcatliu/simplemde-theme-dark/master/dist/simplemde-theme-dark.min.css">
+    <link rel="stylesheet" href="/css/simplemde-theme-dark.min.css">
 </head>
 
 <body class="vertical dark">
