--- a/views/include/menu.mustache
+++ b/views/include/menu.mustache
@@ -64,6 +64,13 @@
                     <span id="myBooksBadgeCount" class="badge badge-pill badge-warning"></span>
                 </a>
             </li>
+
+            <li class="nav-item dropdown {{activeLogs}}">
+                <a href="/logs" class="nav-link">
+                    <i class="fe fe-align-justify fe-16"></i>
+                    <span class="ml-3 item-text">Logs</span>
+                </a>
+            </li>
         </ul>
 
         <div class="btn-box w-100 mt-4 mb-1">
