--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -22,7 +22,7 @@
                     <div class="card mb-4">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Today</h5>
+                                <h5 class="card-title">Today - {{today}}</h5>
                                 <textarea id="logTextArea" hidden>{{todaysLog}}</textarea>
 
                                 <div class="form-group">
