--- a/views/highlights/all.mustache
+++ b/views/highlights/all.mustache
@@ -14,7 +14,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <blockquote class="blockquote">
-                                    <p>{{{html}}}</p>
+                                    <p>{{{highlight}}}</p>
                                     <footer class="blockquote-footer">{{author}} <cite
                                             title="Source Title">{{source}}</cite>
                                     </footer>
