--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="/css/simplemde-theme-dark.min.css">
     <style>
         img {
-            height: 300px;
-            width: 300px;
+            position: relative;
+            left: 50%;
+            transform: translate(-50%, 0);
+            -ms-transform: translate(-50%, 0);
+            -webkit-transform: translate(-50%, 0);
+            max-width: 100%;
+            max-height: 100%;
         }
     </style>
     <link rel="stylesheet"
