--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -142,9 +142,13 @@
 <script src="/js/mustache.min.js"></script>
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dkern/jquery.lazy@1.7.10/jquery.lazy.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/dkern/jquery.lazy@1.7.10/jquery.lazy.plugins.min.js"></script>
 
 <script>
     $(document).ready(function () {
+
+        $(".lazy").Lazy();
 
         hljs.highlightAll();
 
