Add fulltext search

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -69,8 +69,7 @@
 
                     <div>
                         {{#headerTags}}
-                        <a role="button" href="/highlights{{#href}}?tag={{href}}{{/href}}" class="badge badge-{{badge}}
-                            ">
+                        <a role="button" href="/highlights{{#href}}?tag={{href}}{{/href}}" class="badge badge-{{badge}}">
                             <strong>#{{tag}}</strong>
                             </a>
                         {{/headerTags}}
@@ -125,8 +124,6 @@
                         </div>
                         <br class="highlightCardBR">
                     {{/highlights}}
-
-
                     </script>
                     <%={{ }}=%>
 
