Add bookmark's tags to its highlight

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -21,7 +21,7 @@
                                 <textarea id="highlight" hidden></textarea>
 
                                 <div class="input-group input-group-lg">
-                                    <input id="tags" placeholder="Tags" type="text"
+                                    <input id="tags" placeholder="Tags" type="text" value="{{tags}}"
                                            class="form-control enterButtonKeyPress">
                                 </div>
                             </div>
